build/log/idf_py_stderr_output_15873
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'app_main':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:914:15: error: redefinition of 'ret'
  914 |     esp_err_t ret = esp_vfs_fat_sdmmc_mount(mount_point, &host, &slot_config, &mount_config, &card);
      |               ^~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:873:15: note: previous definition of 'ret' with type 'esp_err_t' {aka 'int'}
  873 |     esp_err_t ret = nvs_flash_init();
      |               ^~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:923:33: warning: unused variable 'set' [-Wunused-variable]
  923 |         esp_periph_set_handle_t set = esp_periph_set_init(&periph_cfg);
      |                                 ^~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:937:9: error: 'set' undeclared (first use in this function); did you mean 'ret'?
  937 |         set = esp_periph_set_init(&periph_cfg);
      |         ^~~
      |         ret
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:937:9: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
